# nfl2mac

./: .gitignore  .project  Cargo.toml  README.md  test_assy-split.nfl  test_assy.nfl
sample/: test_assy-soln-split.nfl  test_assy-split.nfl  test_assy-split_1.nfl  test_assy.ggb
src/: args.rs  assembly.rs  main.rs
src/assembly/: part.rs
src/assembly/part/: arc.rs  line.rs
