[package]
name = "nfl2mac"
version = "0.1.0"
authors = ["Autofire <Autofire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
euclid = "0.22.3"
structopt = "0.3"
flexi_logger = "0.17"
log = "0.4"
strum = "0.11"
strum_macros = "0.11"
colored = "2"
